@@ -9,6 +9,7 @@ Version 1.3.14+svn:
 
  * User interface
    * Made ESC clear hotkey when changing hotkeys.
+   * Made quick replay skip messages
    * Linger mode overlay is also drawn over fog and shroud.
 
  * Miscellaneous and bug fixes
